FFmpegfs NEWS

Work on 2.16 in progress (2024-02-XX):

Coming soon...

Important changes in 2.15 (2024-02-03):

* Bugfix: Issue #151: Fixed autocopy STRICT never triggers for video streams
* Bugfix: Closes #153: The --include_extensions parameter now contains a
  description, which was previously missing from the manual and online help.
* Issue #149: 2023-05-04 - xxxxxxxxxx - lavu 58.7.100 - frame.h
  Deprecate AVFrame.interlaced_frame, AVFrame.top_field_first, and
  AVFrame.key_frame.
  Add AV_FRAME_FLAG_INTERLACED, AV_FRAME_FLAG_TOP_FIELD_FIRST, and
  AV_FRAME_FLAG_KEY flags as replacement.
* Issue #149: 2023-05-04 - xxxxxxxxxx - lavu 58.7.100 - frame.h
  Deprecate AVFrame.interlaced_frame, AVFrame.top_field_first, and
  AVFrame.key_frame.
  Add AV_FRAME_FLAG_INTERLACED, AV_FRAME_FLAG_TOP_FIELD_FIRST, and
  AV_FRAME_FLAG_KEY flags as replacement.
* Issue #149: 2021-09-20 - dd846bc4a91 - lavc 59.8.100 - avcodec.h codec.h
  Deprecate AV_CODEC_FLAG_TRUNCATED and AV_CODEC_CAP_TRUNCATED,
  as they are redundant with parsers.
* Closes #136: The CMake build files have been removed. Support was never more
  than experimental, and CMake lacks a good uninstall option. Will stick to
  automake system from now on.

Important changes in 2.14 (2023-06-15):

* Bugfix: Closes #141: Improved memory management by allocating several times the
  average size of allocations. This prevents obtaining tiny portions over and over
  again. Additionally, after the file is opened, grab the entire expected memory
  block rather than doing a tiny allocation initially, followed by a larger
  allocation.
* Bugfix: Avoid race conditions that cause the inter-process semaphore creation to
  fail for the second process.
* Bugfix: Issue #119: If a seek request is still open after EOF, restart
  transcoding.
* Bugfix: Issue #119: To prevent frame/segment creation errors, the frame set and
  HLS code has been updated.
* Bugfix: Avoid crashes during shutdown if cache objects have already been closed.