@@ -1,8 +1,9 @@
 FFmpegfs NEWS
 
-Work on 2.16 in progress (2024-02-XX):
+Important changes in 2.16 (2024-06-XX):
 
-Coming soon...
+* Bugfix: Closes#1072412: Fix build with FFmpeg 7.0. write_packet() now with
+  const buffer as of Libavformat 61+.
 
 Important changes in 2.15 (2024-02-03):
 
